syntax = "proto3";

package project.planton.provider.kubernetes.helmrelease.v1;

import "buf/validate/validate.proto";

//helm-release spec
message HelmReleaseSpec {
  //helm-chart spec
  HelmReleaseSpecChartSpec helm_chart = 1 [
    (buf.validate.field).required = true
  ];
}

//helm-chart spec
message HelmReleaseSpecChartSpec {
  //helm chart repo
  string repo = 1;

  //helm chart name
  string name = 2;

  //helm chart version
  string version = 3;

  //map of key values for helm input
  map<string, string> values = 4;
}
